cabal-version:       2.2

name:                isometry
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robrix/isometry#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
-- category:            Web
build-type:          Simple
extra-source-files:  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Control.Carrier.Database.SQLite
    Control.Carrier.Error.IO
    Control.Carrier.Finally
    Control.Carrier.Reader.Relation
    Control.Carrier.State.IORef
    Control.Carrier.State.ST.Strict
    Control.Carrier.State.STM.TVar
    Control.Carrier.Thread.IO
    Control.Carrier.Trace.Lift
    Control.Concurrent.Lift
    Control.Effect.Database
    Control.Effect.Finally
    Control.Effect.Lens.Exts
    Control.Effect.Thread
    Control.Exception.Lift
    Control.Monad.IO.Class.Lift
    Data.Bin.Bintree
    Data.Bin.Bit
    Data.Bin.Index
    Data.Bin.Octree
    Data.Bin.Quadtree
    Data.Bin.Shape
    Data.Flag
    Data.Functor.C
    Data.Functor.I
    Data.Functor.Interval
    Data.Functor.K
    Data.Unfoldable
    Foreign.C.String.Lift
    Foreign.Marshal.Alloc.Lift
    Foreign.Marshal.Array.Lift
    Foreign.Marshal.Utils.Lift
    Foreign.Storable.Lift
    Geometry.Circle
    Geometry.Transform
    Geometry.Triangle
    GL
    GL.Array
    GL.Buffer
    GL.Carrier.Bind
    GL.Carrier.Check.Identity
    GL.Carrier.Check.IO
    GL.Effect.Bind
    GL.Effect.Check
    GL.Enum
    GL.Error
    GL.Framebuffer
    GL.Object
    GL.Primitive
    GL.Program
    GL.Shader
    GL.Shader.DSL
    GL.Shader.Vars
    GL.Texture
    GL.TextureUnit
    GL.Type
    GL.Viewport
    GL.Uniform
    Isometry.CLI
    Isometry.Draw
    Isometry.Draw.Axis
    Isometry.Draw.Voxel
    Isometry.Frame
    Isometry.Game
    Isometry.Input
    Isometry.Language
    Isometry.Main
    Isometry.Player
    Isometry.Time
    Isometry.UI
    Isometry.View
    Isometry.Voxel
    Isometry.World
    Linear.Exts
    Stochastic.Distribution
    Stochastic.Histogram
    Stochastic.PDF
    Stochastic.Sample.Markov
    Stochastic.Sample.Metropolis
    Stochastic.Sample.Rejection
    Stochastic.Sample.Slice
    UI.Colour
    UI.Context
    UI.Drawable
    UI.Glyph
    UI.Graph
    UI.Graph.Lines
    UI.Graph.Points
    UI.Graph.Vertex
    UI.Label
    UI.Label.Glyph
    UI.Label.Text
    UI.Path
    UI.Typeface
    UI.Window
    Unit
    Unit.Algebra
    Unit.Angle
    Unit.Count
    Unit.Density.Number.Areal
    Unit.Force
    Unit.Length
    Unit.Mass
    Unit.Multiple
    Unit.Power
    Unit.Time
  other-modules:
    Paths_isometry
  autogen-modules:
    Paths_isometry
  build-depends:
    , adjunctions
    , array
    , base
    , containers
    , direct-sqlite ^>= 2.3
    , filepath ^>= 1.4
    , fused-effects      ^>= 1
    , fused-effects-lens ^>= 1.2
    , fused-effects-profile
    , fused-effects-random
    , generic-lens
    , gl
    , lens
    , linear
    , opentype
    , optparse-applicative
    , prettyprinter
    , random
    , sdl2 ^>= 2.5
    , splitmix ^>= 0.0.5
    , stm ^>= 2.5
    , terminal-size
    , text
    , time ^>= 1.9
    , transformers ^>= 0.5
    , vector ^>= 0.12

executable isometry
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , isometry

source-repository head
  type:     git
  location: https://github.com/robrix/isometry
